basic MVC and index implemented

--- a/pages/old/ejercicios2.html
+++ b/pages/old/ejercicios2.html
@@ -46,7 +46,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            fetch('../js/ejercicios2.json')
+            fetch('../js/excercices.json')
                 .then(response => response.json())
                 .then(data => {
                     const container = document.getElementById('ejerciciosContainer');
