--- a/pages/codeRunner.html
+++ b/pages/codeRunner.html
@@ -92,6 +92,6 @@ int main() {
         </div>
     </div>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </body>
 </html>
