--- a/pages/codeRunner.html
+++ b/pages/codeRunner.html
@@ -6,6 +6,7 @@
     <title>C++ to JS Tester</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-okaidia.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-core.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/autoloader/prism-autoloader.min.js"></script>
 </head>
@@ -84,6 +85,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div id="ejercicioList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Ejercicios se cargan aquí -->
     </div>
 
     <script type="module" src="../js/main.js"></script>
