--- a/pages/codeRunner.html
+++ b/pages/codeRunner.html
@@ -12,11 +12,6 @@
 </head>
 <body class="bg-gray-900 text-gray-100 min-h-screen">
     <div class="container mx-auto px-4 py-8">
-        <!-- Header -->
-        <!-- <header class="mb-8 text-center">
-            <h1 class="text-4xl font-bold bg-gradient-to-r from-blue-400 to-purple-600 bg-clip-text text-transparent mb-2">C++ to JS Tester</h1>
-            <p class="text-gray-400">Escribe código C++ y ejecútalo como JavaScript en tu navegador</p>
-        </header> -->
 
         <div id="consignaContainer" class="mb-8"></div>
         <div id="tablaCasos" class="mb-12"></div>
@@ -24,56 +19,31 @@
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
             <!-- Editor de C++ -->
-            <div class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
+            <div class="bg-gray-800 rounded-lg overflow-hidden shadow-xl" style="min-height: 500px !important;">
                 <div class="bg-gray-700 px-4 py-3 flex justify-between items-center">
                     <h2 id="titleCode" class="font-mono text-sm font-semibold"></h2>
                     <button id="runBtn" class="bg-green-600 hover:bg-green-700 text-white px-4 py-1 rounded-md text-sm font-medium transition-colors">
                         Ejecutar Tests
                     </button>
                 </div>
-                <textarea id="userCode" class="w-full h-96 bg-gray-800 text-gray-100 p-4 font-mono text-sm focus:outline-none resize-none"></textarea>
+                <textarea id="userCode" class="w-full h-96 bg-gray-800 text-gray-100 p-4 font-mono text-sm focus:outline-none resize-none" style="height: 100% !important;"></textarea>
+            </div>
+
+            <div id="ejercicioList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-1">        
             </div>
 
             <!-- Resultados y Tests -->
             <div class="space-y-6">
                 <!-- JavaScript Generado -->
-                <div class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
+                <!-- <div class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
                     <div class="bg-gray-700 px-4 py-3">
                         <h2 class="font-mono text-sm font-semibold">JavaScript Generado</h2>
                     </div>
                     <pre id="jsOutput" class="p-4 bg-gray-800 text-gray-300 text-sm overflow-auto max-h-60"><code class="language-javascript">// El código traducido aparecerá aquí</code></pre>
-                </div>
-
-                <!-- Tests -->
-                <!-- <div class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
-                    <div class="bg-gray-700 px-4 py-3 flex justify-between items-center">
-                        <h2 class="font-mono text-sm font-semibold">Tests de Caja Negra</h2>
-                        <button id="addTestBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded-md text-xs font-medium transition-colors">
-                            + Añadir Test
-                        </button>
-                    </div>
-                    <div id="testCases" class="p-4 space-y-3">
-                        
-                        <div class="test-case bg-gray-750 p-3 rounded-md">
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mb-2">
-                                <div>
-                                    <label class="block text-xs text-gray-400 mb-1">Input</label>
-                                    <input type="text" class="w-full bg-gray-700 border border-gray-600 rounded px-3 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-blue-500" value="5">
-                                </div>
-                                <div>
-                                    <label class="block text-xs text-gray-400 mb-1">Output Esperado</label>
-                                    <input type="text" class="w-full bg-gray-700 border border-gray-600 rounded px-3 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-blue-500" value="El doble es: 10">
-                                </div>
-                            </div>
-                            <button class="remove-test bg-red-600 hover:bg-red-700 text-white px-2 py-1 rounded text-xs transition-colors">
-                                Eliminar Test
-                            </button>
-                        </div>
-                    </div>
                 </div> -->
 
                 <!-- Resultados -->
-                <div id="testResults" class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
+                <!-- <div id="testResults" class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
                     <div class="bg-gray-700 px-4 py-3">
                         <h2 class="font-mono text-sm font-semibold">Resultados</h2>
                     </div>
@@ -82,14 +52,24 @@
                             Ejecuta los tests para ver los resultados
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 
-    <div id="ejercicioList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Ejercicios se cargan aquí -->
+    <div id="testResults" class="bg-gray-800 rounded-lg overflow-hidden shadow-xl">
+        <div class="bg-gray-700 px-4 py-3">
+            <h2 class="font-mono text-sm font-semibold">Resultados</h2>
+        </div>
+        <div class="p-4 space-y-3">
+            <div class="text-center text-gray-500 py-8">
+                Ejecuta los tests para ver los resultados
+            </div>
+        </div>
     </div>
+
+    <!-- <div id="ejercicioList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">        
+    </div> -->
 
     <script type="module" src="../js/main.js"></script>
 </body>
