mejoras en java strategy

--- a/pages/codeRunner.html
+++ b/pages/codeRunner.html
@@ -17,9 +17,9 @@
         <div id="tablaCasos" class="mb-12"></div>
 
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <div class="grid grid-cols-1 lg:grid-cols-1 gap-6">
             <!-- Editor de C++ -->
-            <div class="bg-gray-800 rounded-lg overflow-hidden shadow-xl" style="min-height: 500px !important;">
+            <div class="bg-gray-800 rounded-lg shadow-xl" style="min-height: 500px !important; margin-bottom: 40px;">
                 <div class="bg-gray-700 px-4 py-3 flex justify-between items-center">
                     <h2 id="titleCode" class="font-mono text-sm font-semibold"></h2>
                     <button id="runBtn" class="bg-green-600 hover:bg-green-700 text-white px-4 py-1 rounded-md text-sm font-medium transition-colors">
