--- a/pages/codeRunner.html
+++ b/pages/codeRunner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++ to JS Tester</title>
+    <title>Math & Code | Let's practice 🧠</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-okaidia.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/index.css">
